# icfpc2006

./: .gitignore  Makefile  README.md  adventure.md  extract-CBV.hs  extract.lua  fastmark.umz  hack3.bas  hello.um.lua  passwords.dot  passwords.md  passwords.txt  publications.txt  run.c  run_directthreaded.c  run_directthreaded_tailcall.c  run_func.c  run_goto.c  run_goto2.c  run_goto3.c  run_threaded.c  run_threaded_switch.c  run_verbose.c  score.lua  umix.sh  umix_2d.sh  umix_adventure.sh  umix_advise.sh  umix_antomaton.sh  umix_balance.sh  umix_blackknots.sh  umix_ftd.sh  umix_guest.sh
2d/: layout.lua  mult.sml  raytrace.2d  raytrace.sml  raytrace.spec  reverse.sml  testraytrace.lua
aarch64/: Makefile  run_jit.c
adventure/: CHANGELOG.md  EPROM-burner.txt  Junk-Room.txt  MOSFET.txt  README.md  RS232-adapter.txt  USB-cable.txt  adventure.cabal  battery.txt  display.txt  downloader-commands.txt  gc.rml  gc2-head.rml  gc2-tail.rml  gc2.rml  jumper-shunt.txt  keypad-commands.txt  power-cord.txt  progress-bar.txt  status-LED.txt  uploader-commands.txt
adventure/anticensor/: Main.hs
adventure/app/: Main.hs  MultiSet.hs
adventure/lib/: MultiSet.hs
adventure/lib/ADVTR/: Parser.hs  Types.hs
adventure/museum/: codex.txt  fsm.txt  pousse-game.txt  race-car.txt  robber.txt  robot.txt
adventure/prettyprint/: Main.hs
adventure/solver/: Main.hs
antomaton/: puzzle15sol.txt  puzzle1sol.txt  puzzle2sol.txt  puzzle3sol.txt  puzzle5sol.txt
balance/: CHANGELOG.md  PUZZLES.txt  README.md  README.txt  balance.cabal
blackknot/: README.md
blackknots/: 000_spec.txt  010_spec.txt  020_sol.txt  020_spec.txt  030_sol.txt  030_spec.txt  040_spec.txt  050_spec.txt  100_spec.txt  CHANGELOG.md  README.md  (+1 more)
(+15 files in other folders)
