cabal-version:      2.4
name:               adventure
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             ARATA Mizuki
maintainer:         minorinoki@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common deps
    build-depends:    base ^>=4.14.3.0
                    , parsec ^>=3.1.14.0
                    , containers ^>=0.6.5.1
                    , mtl ^>=2.2.2
                    , text-short ^>=0.1.3

library
    import: deps
    exposed-modules: ADVTR.Types, ADVTR.Parser, MultiSet
    hs-source-dirs: lib
    default-language: Haskell2010

executable adventure
    import: deps
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    adventure
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -rtsopts

executable prettyprint
    import: deps
    main-is:          Main.hs
    build-depends:    adventure
    hs-source-dirs:   prettyprint
    default-language: Haskell2010
    ghc-options: -rtsopts

executable anticensor
    import: deps
    main-is:          Main.hs
    build-depends:    process, bytestring, adventure
    hs-source-dirs:   anticensor
    default-language: Haskell2010
    ghc-options: -rtsopts
